ms_parser.output
Terminals unused in grammar

   KW_BREAK
   KW_CONTINUE
   KW_NULL
   STRING_SIMPLE


State 82 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 162 conflicts: 13 shift/reduce
State 254 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | start_condition

    3 start_condition: variable_declaration
    4                | constant_declaration
    5                | function_declaration
    6                | KW_FUNCTION KW_START '(' ')' ':' KW_VOID '{' body '}'

    7 types: KW_NUMBER
    8      | KW_BOOLEAN
    9      | KW_VOID
   10      | KW_STRING

   11 variable_declaration: KW_VAR varList ':' types ';'
   12                     | KW_VAR varList ':' types ',' varList ':' types ';'
   13                     | KW_VAR varList ':' types ';' start_condition
   14                     | KW_VAR varList ':' types ',' varList ':' types ';' start_condition
   15                     | KW_VAR IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition

   16 varList: vars1
   17        | vars1 ',' varList
   18        | IDENT '[' ']'
   19        | IDENT '[' POS_NUM ']'

   20 vars1: IDENT
   21      | IDENT '=' vars2

   22 vars2: REAL
   23      | POS_NUM
   24      | NEG_NUM
   25      | CONST_STRING

   26 varsCont: KW_VAR varList ':' types ';' body
   27         | KW_VAR varList ':' types ',' varList ':' types ';' body
   28         | KW_VAR IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' body

   29 constant_declaration: KW_CONST constList ':' types ';'
   30                     | KW_CONST constList ':' types ',' constList ':' types
   31                     | KW_CONST constList ':' types ';' start_condition
   32                     | KW_CONST constList ':' types ',' constList ':' types ';' start_condition
   33                     | KW_CONST IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition

   34 constList: consts1
   35          | consts1 ',' constList

   36 consts1: IDENT '=' consts2
   37        | IDENT '[' ']' '=' consts2
   38        | IDENT '[' POS_NUM ']' '=' consts2

   39 consts2: REAL
   40        | POS_NUM
   41        | NEG_NUM
   42        | CONST_STRING

   43 constsCont: KW_CONST constList ':' types ';' body
   44           | KW_CONST constList ':' types ',' constList ':' types ';' body
   45           | KW_CONST IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' body

   46 function_declaration: KW_FUNCTION IDENT '(' function_parameters ')' ':' types '{' body '}' ';'
   47                     | KW_FUNCTION IDENT '(' function_parameters ')' ':' types '{' body '}' ';' start_condition

   48 function_parameters: IDENT ':' types
   49                    | IDENT ':' types ',' function_parameters
   50                    | %empty

   51 returnStatement: KW_RETURN ';' body
   52                | KW_RETURN expr ';' body

   53 expr: POS_NUM
   54     | REAL
   55     | IDENT
   56     | NEG_NUM
   57     | KW_TRUE
   58     | KW_FALSE
   59     | CONST_STRING
   60     | POS_NUM expr
   61     | NEG_NUM expr
   62     | REAL expr
   63     | CONST_STRING expr
   64     | '(' expr ')'
   65     | '[' expr ']'
   66     | expr '+' expr
   67     | expr '-' expr
   68     | expr '*' expr
   69     | expr '/' expr
   70     | expr '%' expr
   71     | expr TK_POW expr
   72     | expr '<' expr
   73     | expr '>' expr
   74     | expr TK_EQUAL expr
   75     | expr TK_NEQUAL expr
   76     | expr TK_LEQUAL expr
   77     | KW_NOT expr
   78     | expr KW_AND expr
   79     | expr KW_OR expr

   80 stmt_expr: expr
   81          | IDENT expr

   82 statements: ifStatement
   83           | whileStatement
   84           | forStatement
   85           | functionCall
   86           | assignmentStatement
   87           | returnStatement

   88 ifStatement: KW_IF '(' stmt_expr ')' '{' statements '}' ';' body
   89            | KW_IF '(' stmt_expr ')' '{' statements '}' KW_ELSE KW_IF '(' stmt_expr ')' '{' statements '}' ';' body
   90            | ifStatement KW_ELSE '{' statements '}' ';' body

   91 whileStatement: KW_WHILE '(' stmt_expr ')' '{' statements '}' ';' body

   92 functionCall: IDENT '(' functionCall_parameters ')' ';' body

   93 functionCall_parameters: stmt_expr
   94                        | stmt_expr ',' functionCall_parameters
   95                        | %empty

   96 assignmentStatement: IDENT '=' expr ';' body
   97                    | IDENT '=' functionCall
   98                    | IDENT '=' expr '+' functionCall
   99                    | IDENT '=' expr '-' functionCall
  100                    | IDENT '=' expr '*' functionCall
  101                    | IDENT '=' expr '/' functionCall
  102                    | IDENT '=' expr '%' functionCall
  103                    | IDENT '=' expr TK_POW functionCall

  104 forStatement: KW_FOR '(' assignmentStatement ';' stmt_expr ';' assignmentStatement ')' '{' statements '}' ';' body

  105 body: varsCont
  106     | constsCont
  107     | statements
  108     | %empty


Terminals, with rules where they appear

$end (0) 0
'%' (37) 70 102
'(' (40) 6 46 47 64 88 89 91 92 104
')' (41) 6 46 47 64 88 89 91 92 104
'*' (42) 68 100
'+' (43) 66 98
',' (44) 12 14 17 27 30 32 35 44 49 94
'-' (45) 67 99
'/' (47) 69 101
':' (58) 6 11 12 13 14 15 26 27 28 29 30 31 32 33 43 44 45 46 47 48
    49
';' (59) 11 12 13 14 15 26 27 28 29 31 32 33 43 44 45 46 47 51 52 88
    89 90 91 92 96 104
'<' (60) 72
'=' (61) 15 21 28 33 36 37 38 45 96 97 98 99 100 101 102 103
'>' (62) 73
'[' (91) 15 18 19 28 33 37 38 45 65
']' (93) 15 18 19 28 33 37 38 45 65
'{' (123) 6 46 47 88 89 90 91 104
'}' (125) 6 46 47 88 89 90 91 104
error (256)
IDENT (258) 15 18 19 20 21 28 33 36 37 38 45 46 47 48 49 55 81 92 96
    97 98 99 100 101 102 103
REAL (259) 22 39 54 62
CONST_STRING (260) 15 25 28 33 42 45 59 63
POS_NUM (261) 15 19 23 28 33 38 40 45 53 60
NEG_NUM (262) 24 41 56 61
KW_NUMBER (263) 7
KW_BOOLEAN (264) 8
KW_STRING (265) 10
KW_VOID (266) 6 9
KW_TRUE (267) 57
KW_FALSE (268) 58
KW_VAR (269) 11 12 13 14 15 26 27 28
KW_CONST (270) 29 30 31 32 33 43 44 45
KW_IF (271) 88 89
KW_ELSE (272) 89 90
KW_FOR (273) 104
KW_WHILE (274) 91
KW_FUNCTION (275) 6 46 47
KW_BREAK (276)
KW_CONTINUE (277)
KW_RETURN (278) 51 52
KW_NULL (279)
KW_START (280) 6
KW_NOT (281) 77
TK_POW (282) 71 103
STRING_SIMPLE (283)
TK_EQUAL (284) 74
TK_NEQUAL (285) 75
TK_LEQUAL (286) 76
KW_AND (287) 78
KW_OR (288) 79


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0
start_condition (53)
    on left: 3 4 5 6, on right: 2 13 14 15 31 32 33 47
types (54)
    on left: 7 8 9 10, on right: 11 12 13 14 15 26 27 28 29 30 31 32
    33 43 44 45 46 47 48 49
variable_declaration (55)
    on left: 11 12 13 14 15, on right: 3
varList (56)
    on left: 16 17 18 19, on right: 11 12 13 14 17 26 27
vars1 (57)
    on left: 20 21, on right: 16 17
vars2 (58)
    on left: 22 23 24 25, on right: 21
varsCont (59)
    on left: 26 27 28, on right: 105
constant_declaration (60)
    on left: 29 30 31 32 33, on right: 4
constList (61)
    on left: 34 35, on right: 29 30 31 32 35 43 44
consts1 (62)
    on left: 36 37 38, on right: 34 35
consts2 (63)
    on left: 39 40 41 42, on right: 36 37 38
constsCont (64)
    on left: 43 44 45, on right: 106
function_declaration (65)
    on left: 46 47, on right: 5
function_parameters (66)
    on left: 48 49 50, on right: 46 47 49
returnStatement (67)
    on left: 51 52, on right: 87
expr (68)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79, on right: 52 60 61 62 63 64 65 66 67
    68 69 70 71 72 73 74 75 76 77 78 79 80 81 96 98 99 100 101 102
    103
stmt_expr (69)
    on left: 80 81, on right: 88 89 91 93 94 104
statements (70)
    on left: 82 83 84 85 86 87, on right: 88 89 90 91 104 107
ifStatement (71)
    on left: 88 89 90, on right: 82 90
whileStatement (72)
    on left: 91, on right: 83
functionCall (73)
    on left: 92, on right: 85 97 98 99 100 101 102 103
functionCall_parameters (74)
    on left: 93 94 95, on right: 92 94
assignmentStatement (75)
    on left: 96 97 98 99 100 101 102 103, on right: 86 104
forStatement (76)
    on left: 104, on right: 84
body (77)
    on left: 105 106 107 108, on right: 6 26 27 28 43 44 45 46 47 51
    52 88 89 90 91 92 96 104


State 0

    0 $accept: . program $end
    1 program: . %empty  [$end]
    2        | . start_condition
    3 start_condition: . variable_declaration
    4                | . constant_declaration
    5                | . function_declaration
    6                | . KW_FUNCTION KW_START '(' ')' ':' KW_VOID '{' body '}'
   11 variable_declaration: . KW_VAR varList ':' types ';'
   12                     | . KW_VAR varList ':' types ',' varList ':' types ';'
   13                     | . KW_VAR varList ':' types ';' start_condition
   14                     | . KW_VAR varList ':' types ',' varList ':' types ';' start_condition
   15                     | . KW_VAR IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   29 constant_declaration: . KW_CONST constList ':' types ';'
   30                     | . KW_CONST constList ':' types ',' constList ':' types
   31                     | . KW_CONST constList ':' types ';' start_condition
   32                     | . KW_CONST constList ':' types ',' constList ':' types ';' start_condition
   33                     | . KW_CONST IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   46 function_declaration: . KW_FUNCTION IDENT '(' function_parameters ')' ':' types '{' body '}' ';'
   47                     | . KW_FUNCTION IDENT '(' function_parameters ')' ':' types '{' body '}' ';' start_condition

    KW_VAR       shift, and go to state 1
    KW_CONST     shift, and go to state 2
    KW_FUNCTION  shift, and go to state 3

    $default  reduce using rule 1 (program)

    program               go to state 4
    start_condition       go to state 5
    variable_declaration  go to state 6
    constant_declaration  go to state 7
    function_declaration  go to state 8


State 1

   11 variable_declaration: KW_VAR . varList ':' types ';'
   12                     | KW_VAR . varList ':' types ',' varList ':' types ';'
   13                     | KW_VAR . varList ':' types ';' start_condition
   14                     | KW_VAR . varList ':' types ',' varList ':' types ';' start_condition
   15                     | KW_VAR . IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   16 varList: . vars1
   17        | . vars1 ',' varList
   18        | . IDENT '[' ']'
   19        | . IDENT '[' POS_NUM ']'
   20 vars1: . IDENT
   21      | . IDENT '=' vars2

    IDENT  shift, and go to state 9

    varList  go to state 10
    vars1    go to state 11


State 2

   29 constant_declaration: KW_CONST . constList ':' types ';'
   30                     | KW_CONST . constList ':' types ',' constList ':' types
   31                     | KW_CONST . constList ':' types ';' start_condition
   32                     | KW_CONST . constList ':' types ',' constList ':' types ';' start_condition
   33                     | KW_CONST . IDENT '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   34 constList: . consts1
   35          | . consts1 ',' constList
   36 consts1: . IDENT '=' consts2
   37        | . IDENT '[' ']' '=' consts2
   38        | . IDENT '[' POS_NUM ']' '=' consts2

    IDENT  shift, and go to state 12

    constList  go to state 13
    consts1    go to state 14


State 3

    6 start_condition: KW_FUNCTION . KW_START '(' ')' ':' KW_VOID '{' body '}'
   46 function_declaration: KW_FUNCTION . IDENT '(' function_parameters ')' ':' types '{' body '}' ';'
   47                     | KW_FUNCTION . IDENT '(' function_parameters ')' ':' types '{' body '}' ';' start_condition

    IDENT     shift, and go to state 15
    KW_START  shift, and go to state 16


State 4

    0 $accept: program . $end

    $end  shift, and go to state 17


State 5

    2 program: start_condition .

    $default  reduce using rule 2 (program)


State 6

    3 start_condition: variable_declaration .

    $default  reduce using rule 3 (start_condition)


State 7

    4 start_condition: constant_declaration .

    $default  reduce using rule 4 (start_condition)


State 8

    5 start_condition: function_declaration .

    $default  reduce using rule 5 (start_condition)


State 9

   15 variable_declaration: KW_VAR IDENT . '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   18 varList: IDENT . '[' ']'
   19        | IDENT . '[' POS_NUM ']'
   20 vars1: IDENT .  [',', ':']
   21      | IDENT . '=' vars2

    '['  shift, and go to state 18
    '='  shift, and go to state 19

    $default  reduce using rule 20 (vars1)


State 10

   11 variable_declaration: KW_VAR varList . ':' types ';'
   12                     | KW_VAR varList . ':' types ',' varList ':' types ';'
   13                     | KW_VAR varList . ':' types ';' start_condition
   14                     | KW_VAR varList . ':' types ',' varList ':' types ';' start_condition

    ':'  shift, and go to state 20


State 11

   16 varList: vars1 .  [':']
   17        | vars1 . ',' varList

    ','  shift, and go to state 21

    $default  reduce using rule 16 (varList)


State 12

   33 constant_declaration: KW_CONST IDENT . '[' POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   36 consts1: IDENT . '=' consts2
   37        | IDENT . '[' ']' '=' consts2
   38        | IDENT . '[' POS_NUM ']' '=' consts2

    '['  shift, and go to state 22
    '='  shift, and go to state 23


State 13

   29 constant_declaration: KW_CONST constList . ':' types ';'
   30                     | KW_CONST constList . ':' types ',' constList ':' types
   31                     | KW_CONST constList . ':' types ';' start_condition
   32                     | KW_CONST constList . ':' types ',' constList ':' types ';' start_condition

    ':'  shift, and go to state 24


State 14

   34 constList: consts1 .  [':']
   35          | consts1 . ',' constList

    ','  shift, and go to state 25

    $default  reduce using rule 34 (constList)


State 15

   46 function_declaration: KW_FUNCTION IDENT . '(' function_parameters ')' ':' types '{' body '}' ';'
   47                     | KW_FUNCTION IDENT . '(' function_parameters ')' ':' types '{' body '}' ';' start_condition

    '('  shift, and go to state 26


State 16

    6 start_condition: KW_FUNCTION KW_START . '(' ')' ':' KW_VOID '{' body '}'

    '('  shift, and go to state 27


State 17

    0 $accept: program $end .

    $default  accept


State 18

   15 variable_declaration: KW_VAR IDENT '[' . POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   18 varList: IDENT '[' . ']'
   19        | IDENT '[' . POS_NUM ']'

    POS_NUM  shift, and go to state 28
    ']'      shift, and go to state 29


State 19

   21 vars1: IDENT '=' . vars2
   22 vars2: . REAL
   23      | . POS_NUM
   24      | . NEG_NUM
   25      | . CONST_STRING

    REAL          shift, and go to state 30
    CONST_STRING  shift, and go to state 31
    POS_NUM       shift, and go to state 32
    NEG_NUM       shift, and go to state 33

    vars2  go to state 34


State 20

    7 types: . KW_NUMBER
    8      | . KW_BOOLEAN
    9      | . KW_VOID
   10      | . KW_STRING
   11 variable_declaration: KW_VAR varList ':' . types ';'
   12                     | KW_VAR varList ':' . types ',' varList ':' types ';'
   13                     | KW_VAR varList ':' . types ';' start_condition
   14                     | KW_VAR varList ':' . types ',' varList ':' types ';' start_condition

    KW_NUMBER   shift, and go to state 35
    KW_BOOLEAN  shift, and go to state 36
    KW_STRING   shift, and go to state 37
    KW_VOID     shift, and go to state 38

    types  go to state 39


State 21

   16 varList: . vars1
   17        | . vars1 ',' varList
   17        | vars1 ',' . varList
   18        | . IDENT '[' ']'
   19        | . IDENT '[' POS_NUM ']'
   20 vars1: . IDENT
   21      | . IDENT '=' vars2

    IDENT  shift, and go to state 40

    varList  go to state 41
    vars1    go to state 11


State 22

   33 constant_declaration: KW_CONST IDENT '[' . POS_NUM ']' '=' CONST_STRING ':' types ';' start_condition
   37 consts1: IDENT '[' . ']' '=' consts2
   38        | IDENT '[' . POS_NUM ']' '=' consts2

    POS_NUM  shift, and go to state 42
    ']'      shift, and go to state 43


State 23

   36 consts1: IDENT '=' . consts2
   39 consts2: . REAL
   40        | . POS_NUM
   41        | . NEG_NUM
   42        | . CONST_STRING

    REAL          shift, and go to state 44
    CONST_STRING  shift, and go to state 45
    POS_NUM       shift, and go to state 46
    NEG_NUM       shift, and go to state 47

    consts2  go to state 48


State 24

    7 types: . KW_NUMBER
    8      | . KW_BOOLEAN
    9      | . KW_VOID
   10      | . KW_STRING
   29 constant_declaration: KW_CONST constList ':' . types ';'
   30                     | KW_CONST constList ':' . types ',' constList ':' types
   31                     | KW_CONST constList ':' . types ';' start_condition
   32                     | KW_CONST constList ':' . types ',' constList ':' types ';' start_condition

    KW_NUMBER   shift, and go to state 35
    KW_BOOLEAN  shift, and go to state 36
    KW_STRING   shift, and go to state 37
    KW_VOID     shift, and go to state 38

    types  go to state 49


State 25

   34 constList: . consts1
   35          | . consts1 ',' constList
   35          | consts1 ',' . constList
   36 consts1: . IDENT '=' consts2
   37        | . IDENT '[' ']' '=' consts2
   38        | . IDENT '[' POS_NUM ']' '=' consts2

    IDENT  shift, and go to state 50

    constList  go to state 51
    consts1    go to state 14


State 26

   46 function_declaration: KW_FUNCTION IDENT '(' . function_parameters ')' ':' types '{' body '}' ';'
   47                     | KW_FUNCTION IDENT '(' . function_parameters ')' ':' types '{' body '}' ';' start_condition
   48 function_parameters: . IDENT ':' types
   49                    | . IDENT ':' types ',' function_parameters
   50                    | . %empty  [')']

    IDENT  shift, and go to state 52

    $default  reduce using rule 50 (function_parameters)

    function_parameters  go to state 53


State 27

    6 start_condition: KW_FUNCTION KW_START '(' . ')' ':' KW_VOID '{' body '}'

    ')'  shift, and go to state 54


State 28

   15 variable_declaration: KW_VAR IDENT '[' POS_NUM . ']' '=' CONST_STRING ':' types ';' start_condition
   19 varList: IDENT '[' POS_NUM . ']'

    ']'  shift, and go to state 55


State 29

   18 varList: IDENT '[' ']' .

    $default  reduce using rule 18 (varList)


State 30

   22 vars2: REAL .

    $default  reduce using rule 22 (vars2)


State 31

   25 vars2: CONST_STRING .

    $default  reduce using rule 25 (vars2)


State 32

   23 vars2: POS_NUM .

    $default  reduce using rule 23 (vars2)


State 33

   24 vars2: NEG_NUM .

    $default  reduce using rule 24 (vars2)


State 34

   21 vars1: IDENT '=' vars2 .

    $default  reduce using rule 21 (vars1)


State 35

    7 types: KW_NUMBER .

    $default  reduce using rule 7 (types)


State 36

    8 types: KW_BOOLEAN .

    $default  reduce using rule 8 (types)


State 37

   10 types: KW_STRING .

    $default  reduce using rule 10 (types)


State 38

    9 types: KW_VOID .

    $default  reduce using rule 9 (types)


State 39

   11 variable_declaration: KW_VAR varList ':' types . ';'
   12                     | KW_VAR varList ':' types . ',' varList ':' types ';'
   13                     | KW_VAR varList ':' types . ';' start_condition
   14                     | KW_VAR varList ':' types . ',' varList ':' types ';' start_condition

    ','  shift, and go to state 56
    ';'  shift, and go to state 57


State 40

   18 varList: IDENT . '[' ']'
   19        | IDENT . '[' POS_NUM ']'
   20 vars1: IDENT .  [',', ':']
   21      | IDENT . '=' vars2

    '['  shift, and go to state 58
    '='  shift, and go to state 19

    $default  reduce using rule 20 (vars1)


State 41

   17 varList: vars1 ',' varList .

    $default  reduce using rule 17 (varList)


State 42
